crates/kul-wasm/tests/snapshots/export_graph__example_06_three_branch_dynasty.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "govind",
        "name": "Govind Iyer",
        "gender": "male",
        "born": {
          "value": "1900-02-14",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "lakshmi",
        "name": "Lakshmi Iyer",
        "gender": "female",
        "born": {
          "value": "1903-09-21",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "arjun",
        "name": "Arjun Iyer",
        "gender": "male",
        "born": {
          "value": "1925-04-10",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "indira",
        "name": "Indira Iyer",
        "gender": "female",
        "born": {
          "value": "1928-11-12",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "dilip",
        "name": "Dilip Iyer",
        "gender": "male",
        "born": {
          "value": "1948-08-05",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "hema",
        "name": "Hema Iyer",
        "gender": "female",
        "born": {
          "value": "1950-12-03",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "eshwar",
        "name": "Eshwar Iyer",
        "gender": "male",
        "born": {
          "value": "1950-03-22",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "ila",
        "name": "Ila Iyer",
        "gender": "female",
        "born": {
          "value": "1952-07-09",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "bharat",
        "name": "Bharat Iyer",
        "gender": "male",
        "born": {
          "value": "1928-09-15",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "janaki",
        "name": "Janaki Iyer",
        "gender": "female",
        "born": {
          "value": "1930-04-28",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "mohan",
        "name": "Mohan Iyer",
        "gender": "male",
        "born": {
          "value": "1951-06-04",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "jyoti",
        "name": "Jyoti Iyer",
        "gender": "female",
        "born": {
          "value": "1953-01-17",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "chitra",
        "name": "Chitra Iyer",
        "gender": "female",
        "born": {
          "value": "1931-12-25",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "karan",
        "name": "Karan Iyer",
        "gender": "male",
        "born": {
          "value": "1929-10-14",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "gaurav",
        "name": "Gaurav Iyer",
        "gender": "male",
        "born": {
          "value": "1953-05-11",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "kamala",
        "name": "Kamala Iyer",
        "gender": "female",
        "born": {
          "value": "1955-09-30",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "marriages": [
      {
        "id": "m_govind_lakshmi",
        "spouses": [
          "govind",
          "lakshmi"
        ],
        "start": {
          "value": "1922-05-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_arjun_indira",
        "spouses": [
          "arjun",
          "indira"
        ],
        "start": {
          "value": "1947-06-18",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_dilip_hema",
        "spouses": [
          "dilip",
          "hema"
        ],
        "start": {
          "value": "1970-02-14",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_eshwar_ila",
        "spouses": [
          "eshwar",
          "ila"
        ],
        "start": {
          "value": "1972-10-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_bharat_janaki",
        "spouses": [
          "bharat",
          "janaki"
        ],
        "start": {
          "value": "1950-11-19",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_mohan_jyoti",
        "spouses": [
          "mohan",
          "jyoti"
        ],
        "start": {
          "value": "1974-03-08",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_chitra_karan",
        "spouses": [
          "chitra",
          "karan"
        ],
        "start": {
          "value": "1952-08-22",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_gaurav_kamala",
        "spouses": [
          "gaurav",
          "kamala"
        ],
        "start": {
          "value": "1975-12-05",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_govind_lakshmi",
        "childId": "arjun",
        "kind": "biological"
      },
      {
        "marriageId": "m_arjun_indira",
        "childId": "dilip",
        "kind": "biological"
      },
      {
        "marriageId": "m_arjun_indira",
        "childId": "eshwar",
        "kind": "biological"
      },
      {
        "marriageId": "m_govind_lakshmi",
        "childId": "bharat",
        "kind": "biological"
      },
      {
        "marriageId": "m_bharat_janaki",
        "childId": "mohan",
        "kind": "biological"
      },
      {
        "marriageId": "m_govind_lakshmi",
        "childId": "chitra",
        "kind": "biological"
      },
      {
        "marriageId": "m_chitra_karan",
        "childId": "gaurav",
        "kind": "biological"
      }
    ]
  }
}
